--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
             <div class="fila">
                 <!-- Technical Skill -->
                 <div class="col">
-                    <h3>Technical Skills</h3>
+                    <h3>Technical Skills</h3>                    
                     <div class="skill">
-                        <span>HTML & CSS</span>
+                        <span>Android</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span>95%</span>
                             </div>
                         </div>
                     </div>
@@ -152,10 +152,10 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Android</span>
+                        <span>Kotlin</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>95%</span>
+                                <span>55%</span>
                             </div>
                         </div>
                     </div>
@@ -168,10 +168,10 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Kotlin</span>
+                        <span>HTML & CSS</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>55%</span>
+                                <span>75%</span>
                             </div>
                         </div>
                     </div>
@@ -213,8 +213,8 @@
                     <div class="item izq">
                         <h4>Programacion</h4>
                         <span class="casa">Platzi</span>
-                        <span class="fecha">2019 - 2021</span>
-                        <p>JavaScript, HTML, CSS, GitHub, node, firebase</p>
+                        <span class="fecha">2019 - 2022</span>
+                        <p>JavaScript, HTML, CSS, GitHub, Git, node, firebase, Trello, Figma</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -235,7 +235,7 @@
                     <div class="item der">
                         <h4>Base de Datos</h4>
                         <span class="casa">AMCYAT</span>
-                        <span class="fecha">2016 - Actual</span>
+                        <span class="fecha">2016 - 5/2023</span>
                         <p>Carga de datos para los medicos del Pami</p>
                         <div class="conectord">
                             <div class="circulod"></div>
