--- a/index.html
+++ b/index.html
@@ -182,14 +182,33 @@
             <div class="contenido-seccion">
                 <h2>PORTFOLIO</h2>
                 <div class="galeria">
+                <a href= "https://bravocristian.github.io/alura.github.io/" target="_blank">
                     <div class="proyecto">
-                        <img src="img/p1.jpg" alt="">
+                        <img src="img/Barberia.png" alt="">
                         <div class="overlay">
                             <h3>Diseño Creativo</h3>
                             <p>Fotografía</p>
                         </div>
                     </div>
-                    
+                </a>
+                <a href= "https://bravocristian.github.io/proyectoalura.github.io/" target="_blank">
+                    <div class="proyecto">
+                        <img  src="img/encriptador.png" alt="">
+                        <div class="overlay">
+                            <h3>Diseño Creativo</h3>
+                            <p>Fotografía</p>
+                        </div>
+                    </div>
+                </a>
+                <a href= "https://bravocristian.github.io/critianjb/" target="_blank">
+                    <div class="proyecto">
+                        <img src="img/portafolio.png"  alt="">
+                        <div class="overlay">
+                            <h3>Diseño Creativo</h3>
+                            <p>Fotografía</p>
+                        </div>
+                    </div>
+                </a>                    
                 </div>
             </div>
         </section>
