--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="img/hero.png" alt="">
             </div>
             <h2>  CRISTIAN BRAVO</h2>
-            <h2> Android Developer - Experto ANDROID | JAVA | KOTLIN</h2>
+            <h2> Desarrollador Web | JAVASCRIPT | HTML & CSS</h2>
             <div class="redes">
                 <a href="https://wa.me/5493813033939" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="https://instagram.com/cristianjbravo48" target="_blank"><i class="fa-brands fa-instagram"></i></a>
