--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Cristian Bravo.</span>Programador especializado en front end con Android Studio. Busco trabajar en una Empresa de Sofware para seguir desarrollando mis aptitudes en la programación. </p>
+            <p><span>Hola, soy Cristian Bravo.</span>Programador especializado en Desarrollador Web. Busco trabajar en una Empresa de Sofware para seguir desarrollando mis aptitudes en la programación. </p>
 
             <div class="fila">
                 <!-- datos personales -->
